Mejora visualizacion de resultados